--- a/assets/css/style_404.css
+++ b/assets/css/style_404.css
@@ -1,199 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap');
 
-/* Global */
-*{
-    font-family: 'Rajdhani', sans-serif;
-    color: white;
-    box-sizing: border-box;
-    margin:0;
-    padding:0; 
+
+.error-message {
+    margin: 5em;
 }
 
-.landing-video{ 
-    margin: 0;
-    padding: 0;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    transform: translateX(-50%) translateY(-50%);
-    background-size: cover;
-    background-position: center;
-}
-.landing-overlay {
-    margin: 0;
-    padding: 0;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    transform: translateX(-50%) translateY(-50%);
-    background-size: cover;
-    background-position: center;
-    background: #03a9f4;
-    mix-blend-mode: overlay;
-}
-header{
-    margin: 0;
-    padding: 0;
-    display:flex;
-    justify-content: space-between;
-    width: 100%;
-    background-color: black;
-    border-bottom: cyan 3px solid;
-    align-items: center;
-}
-#branding a{
-    text-decoration: none;
-    text-transform: none;
-    font-size: 80px;
-    font-style: italic;
-    padding-right: 20px;
-    margin: 5px;
-    position: relative;
-    left: 17px;
-}
-h2{
+.error-message h2{
     color: red;
     margin:0;
-    font-size: 40px;
+    font-size: 2em;
     font-style: italic;
-}
-p{  
-    position: static;
-    font-size: 36px;
-}
-
-/* -------------- FOOTER -------------- */
-.container-fluid {
-    display: flex;
-    justify-content: space-evenly;
-    outline: solid 2px cyan;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: black;
-}
-#footer-details {
-    padding: 20px;
-}
-.col-sm-4 {
-    display: inline;
-}
-.social-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    padding-top: 5px;
-}
-.social-links li a i {
-    margin: 0 10px;
-    width:64px;
-    height: 64px;
-    padding: 24px 0;
-    border-radius: 50%;
-    font-size: 36px;
-    line-height: 16px;
-    text-align: center;
-    color: white;
-    background-color: rgb(35, 0, 236);
-    transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
-    -webkit-transition: all 0.35s ease-in-out;
-    -o-transition: all 0.35s ease-in-out;
-}
-.social-links li a i:hover {
-    background:greenyellow;
-    color: black;
-}
-
- /* RESPONSIVENESS: MEDIA QUERIES */
- @media (max-width: 768px){
-
-    body {
-        margin-block-start: 0;
-    margin-block-end: 0;
-    }
-
-header {
-    width: 100%;
-    margin: 0;
-    padding: 20px;
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-}
-
-h1 {
-    font-style:unset;
-    margin: 0;
-    padding: 0;
-    text-align:center;
-}
-h2 {
-    display: inline;
-    font-size: 30px;
-    text-align: center;
-}
-h3 {
-    font-size: 24px;
-    padding: 0;
-    margin: 0;
-}
-p {
-    
-    padding: 0;
-    margin: 0;
-    font-size: 30px;
-}
-
-/* FOOTER - RESPONSIVENESS */
-.container-fluid{
-    position: relative;
-    top: 300px;
-    padding: 10px;
-    height: 100px;
-    width: 100%;
-    /* border: solid 2px cyan; */
-    outline: none;
-} 
-#footer-details {
-    display: inline;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    border: none;
-}
-.col-sm-4 {
-     position: relative;
-     right: 5px;
-    top: 5px;
     
 }
-.list-inline {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
+.error-message p{  
+    font-size: 2em;
+    
 }
-.social-links li a i {
-    font-size: 36px;
-    width: 32px;
-    height: 32px;
-    padding: 12px 0;
-    margin: 0 5px;
-    line-height: 8px;
-    text-align:center;
-}
-}
-
 
