--- a/assets/css/style_404.css
+++ b/assets/css/style_404.css
@@ -1,19 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap');
-
 
 .error-message {
     margin: 5em;
 }
-
 .error-message h2{
     color: red;
     margin:0;
     font-size: 2em;
     font-style: italic;
-    
 }
 .error-message p{  
     font-size: 2em;
-    
 }
 
+/* 320px = 20em */
+@media screen and (min-width: 20em) and (max-width:119.938em) {
+
+.logotype {
+    position: relative;
+    top: -1em;
+}
+}
