--- a/assets/css/style_article.css
+++ b/assets/css/style_article.css
@@ -1,101 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap');
-
-/* Global */
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding:0;
-}
-
-body {
-    font-family: 'Rajdhani', sans-serif;
-    font-size: clamp(1rem, 1vw + 0.5rem, 5rem);
-    color: white;
-    width: 100%;
-    overflow:hidden;
-}
-/* -------------- HEADER -------------- */ 
-.header-container{
-    display:flex;
-    justify-content: space-between;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 3em;
-    background-color:rgba(7, 7, 7, 0.2);
-    border-bottom: 2px solid;
-        border-image: linear-gradient(
-        to right,
-        #FF00FF 10%,
-        rgb(0, 255, 255) 60%,
-        #FF00FF 70%
-        ) 1 2 10%;
-}
-.logotype{
-    position: relative;
-    top: 0.2em;
-    left: 4%;
-    color:#ffffff;
-    text-decoration: unset;
-    font-size: clamp(3rem, 1vw + 1rem, 5rem);
-    margin: 0.5em;
-    font-family: "Conthrax";
-}
-/* ----------- NAV-BAR ----------- */
-.navbar {
-    display: flex;
-    justify-content: end;
-    width: 100%;
-    position: relative;
-    top: -1.5em;
-    left: 0em;
-    margin: 1em;
-}
-.navbar ul {
-    display: flex;
-    gap: 3em;
-    list-style: none;
-    margin: 0;
-    padding: 1em;
-}
-.navbar a {
-    color:#ffffff;
-    font-size: clamp(3rem, 1vw + 1rem, 5rem);
-    text-transform: uppercase;
-    text-decoration: unset;
-}
-.navbar .highlight, 
-.navbar .current a
-{
- color:e8491d;
- font-weight:bold;
-}
- .navbar a:hover{
- color:#05f7ff;
- font-weight:bold;
-}
- .logotype:hover{
- color:#05f7ff;
-}
-.form-button:hover{
- background-color:#05f7ff;
- color: black;
-}
-
-/* -------------- LANDING VIDEO -------------- */ 
-
-
+/* - HIDDEN - */
+.blog-post img,
+.blog-post a,
+.newsletter-container,
 .landing-video,
-.landing-overlay { 
-    z-index: -400;
-   
-
-}
-
-
+.landing-overlay,
 .landing-text {
-    display: none;
-}
+        display: none;
+} 
 
 /* -------------- BLOG -------------- */
 .blog-container {
@@ -108,14 +19,12 @@ body {
     text-align: center;
     filter: drop-shadow(0 0 8px rgba(14, 0, 214, 0.966));
 }
-
 .blog-container li {
     margin: 1em 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(1rem, 0.5vw + 1rem, 1rem);
     text-align: start;
 }
-
 .blog-post {
 height: auto;
 max-width:40em;
@@ -156,7 +65,6 @@ rgba(255, 25, 224, 0.1)
     text-align:start;
     font-size: clamp(1rem, 0.5vw + 1rem, 2rem);
 }
-
 .blog-post p {
     text-align:start;
     font-family: Arial, Helvetica, sans-serif;
@@ -172,211 +80,11 @@ rgba(255, 25, 224, 0.1)
     color: cyan;
 }
 
-/* -------------- NEWSLETTER -------------- */
-.newsletter-container {
-    position: absolute;
-    top: 27em;
-    left:30.3em;
-    padding: 0.5em;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    width: 80%;
-}
-.newsletter{
-    padding: 0.5em;
-    width: 30%;
-}
-.newsletter-container h2{
-    display:none;
-    font-style: italic;
-    text-align: center;
-    margin-top: 0em;
-    padding: 0.3em;
-    font-size: clamp(1rem, 1vw + 3rem, 5rem);
-}
-.newsletter h3{
-    text-align: center;
-    color:cyan;
-    font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
-    background-color: black;
-}
-input[type="email"]{
-    padding:1em;
-    outline: unset;
-}
-#validateEmail {
-    text-align: center;
-    width: 100%;
-    font-family: "Rajdhani";
-    font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
-    margin: 0;
-    padding: 0em;
-    background-color: none;
-    color:black;
-    outline: unset;
-}
-.form-button{
-    font-family: "Conthrax";
-    width: 100%;
-    font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
-    background-color: black;
-    color:cyan;
-    border-top: 0.2em solid ;
-        border-right: 0.2em solid ;
-        border-bottom: 0.2em solid;
-        border-left: 0.2em solid ;
-        border-image:linear-gradient(
-            to bottom,
-            rgba(50, 8, 201, 0.5),
-            rgba(8, 255, 255, 0.8),
-            rgba(255, 25, 224, 0.8),
-            rgba(255, 25, 224, 0.1)
-          ) 1 2 10% 90%;
-}
-/* -------------- FOOTER -------------- */
-.footer-container {
-    width: 30%;
-    height: auto;
-    margin: 0;
-    padding:0;
-    position: absolute;
-    left: 48em;
-    bottom: 0.2em;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-#footer-details {
-    margin: 0;
-    padding: 0;
-}
-
-.social-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    padding-top: 0.3em;
-    margin: 0;
-}
-.social-links li a i {
-    margin: 0.5em;
-    padding: 0;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    font-size: clamp(2.5rem, 1vw + 1rem, 5rem);
-    line-height: 3.8rem;
-    text-align: center;
-    color: white;
-    background-color: rgb(35, 0, 236);
-    transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
-    -webkit-transition: all 0.35s ease-in-out;
-    -o-transition: all 0.35s ease-in-out;
-}
-.social-links li a i:hover {
-    background:greenyellow;
-    color: black;
-    
-}
-
-
 /* RESPONSIVENESS: MEDIA QUERIES */ 
 
 /* 320px = 20em */
  @media screen and (min-width: 20em) and (max-width: 119.938em){
   
-/* ----------- HEADER ----------- */
-.header-container {
-    display:flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    width: 100%;
-    height: 7em;
-    background-color:rgba(7, 7, 7, 0.9);
-    border-bottom: 2px solid;
-        border-image: linear-gradient(
-        to right,
-        #FF00FF 10%,
-        rgb(0, 255, 255) 60%,
-        #FF00FF 70%
-        ) 1 2 10%;
-    }
-    #branding {
-        margin-top: 4em;
-    }
-    .logotype{
-        position: relative;
-        top: 0em;
-        left: 0em;
-        color:#ffffff;
-        text-decoration: unset;
-        font-size: clamp(1rem, 1vw + 2rem, 5rem);
-        font-family: "Conthrax";
-       
-    }
-
-/* ----------- NAV-BAR ----------- */
-.navbar {
-    justify-content: center;
-    position: relative;
-    top: 0em;
-    left: 0em;
-    margin: 0em;
-}
-.navbar ul {
-    display: flex;
-    justify-content: center;
-    gap: 1.5em;
-    list-style: none;
-    margin: 1em;
-    padding: 0;
-}
-.navbar a {
-    color:#ffffff;
-    font-size: clamp(0.2rem, 1vw + 1rem, 4rem);
-    text-transform: uppercase;
-    text-decoration: unset;
-}   
-
-/* -------------- LANDING VIDEO -------------- */ 
-.landing-video,
-.landing-overlay { 
-    margin: 0;
-    padding: 0;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 300%;
-    min-height: 300%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    transform: translateX(-50%) translateY(-50%) rotateX(0deg) rotateY(10deg);
-    background-size: cover;
-    background-position: center;
-}
-.landing-overlay {
-    background: #524399;
-    mix-blend-mode: overlay;
-}
-
-/* -------------- LANDING IMAGE -------------- */ 
-.landing-image-container img {
-    display: none;
-}
-
-/* -------------- LANDING TEXT -------------- */
-.landing-text {
-    display:none;
-    margin: 0;
-    padding: 3em 2em;
-    position: absolute;
-    top: 25em;
-}
 
 /* -------------- BLOG -------------- */
 .blog-container {
@@ -428,8 +136,6 @@ input[type="email"]{
     text-align:start;
 }
 .blog-container p {
-    /* display:none; */
-    /* text-align:start; */
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(0.2rem, 0.5vw + 0.7rem, 0.5rem);
 }
@@ -437,67 +143,19 @@ input[type="email"]{
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(0.2rem, 0.5vw + 0.7rem, 0.5rem);
 }
-.blog-post a {
-    position: relative;
-    top: 0em;
-    font-size: clamp(0.7rem, 0.8vw + 1rem, 1rem);
-    margin: 0.3em;
-    color: cyan;
-}
 
-
-
-
-.blog-post img,
-.blog-post-2 img,
-.blog-post-3 img,
-.blog-post-2,
-.blog-post-3 {
-        display: none;
-} 
-
-
-/* -------------- FOOTER -------------- */
-.footer-container {  
-        display:flex;
-        margin: 0;
-        padding: 0;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        height: auto;
-        left:0;
-        background-color: rgba(0, 0, 0, 0.9);
-        border-top: 2px solid;
-        border-image: linear-gradient(
-        to left,
-        #FF00FF 10%,
-        rgb(0, 255, 255) 60%,
-        #FF00FF 70%
-        ) 1 2 10%;
-}
-.social-links li a i { 
-        margin: 0.3em;
-        padding: 0;
-        width: 40px;
-        height: 40px;
-        font-size: clamp(1.7rem, 0.8vw + 1rem, 2rem);
-        line-height: 2.5rem;  
-}
-#footer-details {
-    padding: 0.2em;
-}
 }
 /* 375px = 23.438em */
 @media screen and (min-width: 23.438em) and (max-width:119.938em) {
     .blog-container {
-        min-height: 25em;
+        min-height: 28em;
         margin-top: 2em;
     }
     
     .blog-post {
         position: relative;
         top: 0em;
+        height: auto;
     }
 
     .blog-container p,
@@ -506,7 +164,6 @@ input[type="email"]{
         font-size: clamp(0.5rem, 0.5vw + 1rem, 0.6rem);
     }
 }
-
 
 /* 600px = 37.5em */
 @media screen and (min-width: 37.5em) and (max-width:119.938em) {
