--- a/assets/css/style_resources.css
+++ b/assets/css/style_resources.css
@@ -1,117 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap');
-
-
-/* Global */
-*{
-    /* outline: greenyellow 0.2px solid; */
-    box-sizing: border-box;
-    margin: 0;
-    padding:0;
-}
-
-body {
-    font-family: 'Rajdhani', sans-serif;
-    font-size: clamp(1rem, 1vw + 0.5rem, 5rem);
-    color: white;
-    width: 100%;
-    overflow:hidden;
-    background-color: rgb(0, 0, 0);
-}
-/* -------------- HEADER -------------- */ 
-.header-container{
-    display:flex;
-    justify-content: space-between;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 3em;
-    background-color:rgba(7, 7, 7, 0.2);
-    border-bottom: 2px solid;
-        border-image: linear-gradient(
-        to right,
-        #FF00FF 10%,
-        rgb(0, 255, 255) 60%,
-        #FF00FF 70%
-        ) 1 2 10%;
-}
-.logotype{
-    position: relative;
-    top: 0.2em;
-    left: 4%;
-    color:#ffffff;
-    text-decoration: unset;
-    font-size: clamp(3rem, 1vw + 1rem, 5rem);
-    margin: 0.5em;
-    font-family: "Conthrax";
-}
-
-/* ----------- NAV-BAR ----------- */
-.navbar {
-    display: flex;
-    justify-content: end;
-    width: 100%;
-    height: auto;
-    position: relative;
-    top: -1.5em;
-    left: 0em;
-    margin: 1em;
-}
-.navbar ul {
-    display: flex;
-    gap: 3em;
-    height: 4em;
-    list-style: none;
-    margin: 0;
-    padding: 1em;
-}
-.navbar a {
-    color:#ffffff;
-    font-size: clamp(3rem, 1vw + 1rem, 5rem);
-    text-transform: uppercase;
-    text-decoration: unset;
-}
-
-.navbar .highlight, 
-.navbar .current a
-{
- color:e8491d;
- font-weight:bold;
-}
- .navbar a:hover{
- color:#05f7ff;
- font-weight:bold;
-}
- .logotype:hover{
- color:#05f7ff;
-}
-.form-button:hover{
- background-color:#05f7ff;
- color: black;
-}
-
-/* -------------- LANDING IMAGE -------------- */ 
-.landing-image-container{
-    display: none;
-}
-/* -------------- LANDING TEXT -------------- */ 
-.landing-text {
-    display: none;
-}
-/* - HIDDEN - */
-.landing-text{
-display:none;
-}
 /* - VISIBLE - */
-.newsletter-container,
 .landing-video,
 .landing-image-container,
 .blog-post,
 .blog-post-2,
 .blog-post-3,
 .blog-post-2 img,
-.blog-post-3 img
-{
+.blog-post-3 img {
 display:block;
+}
+
+/* - HIDDEN - */
+.newsletter-container,
+.blog-container img,
+.landing-text,
+.landing-image-container{
+display:none;
 }
 
 /* -------------- BLOG -------------- */
@@ -120,13 +23,8 @@ height: auto;
 position: absolute;
 top: 7em;
 left: 25.4em;
-display: flex;
-justify-content: center;
-align-items: center;
 flex-direction: column;
 gap: 3em;
-margin: 0;
-padding: 0;
 }
 
 .blog-post,
@@ -137,10 +35,7 @@ min-height: 3em;
 max-height: 5em;
 padding: 0.5em 1em;
 background-color: black;
-border-top: 4px solid;
-border-right: 4px solid;
-border-bottom: 4px solid;
-border-left: 4px solid;
+border: 4px solid;
 border-image:linear-gradient(
 to bottom,
 rgba(8, 85, 201, 0.5),
@@ -149,12 +44,7 @@ rgba(255, 25, 224, 0.8),
 rgba(255, 25, 224, 0.1)
 ) 1 2 10% 90%; } 
 
-.blog-container img {
-    display:none;
-}
-
 .blog-container h2{
-    /* outline: auto; */
     margin: 0em;
     padding: 0.2em;
     text-align: center;
@@ -169,7 +59,6 @@ rgba(255, 25, 224, 0.1)
 
 .blog-container p {
     text-align: center;
-    margin-bottom: 0;
     padding: 0.2em 0.3em;
     font-size: clamp(1rem, 1vw + 1rem, 3rem);
 }
@@ -179,15 +68,6 @@ rgba(255, 25, 224, 0.1)
     text-decoration: unset;
     color:white;
 }
-.blog-container a:hover{
-    color: cyan;
-   }
-   
-/* -------------- NEWSLETTER -------------- */
-.newsletter-container {
-    display: none;
-}
-
 
 /* -------------- FOOTER -------------- */
 .footer-container {
@@ -209,22 +89,13 @@ rgba(255, 25, 224, 0.1)
     ) 1 2 10%;
 }
 
-#footer-details {
-padding:0em;
-}
-
 .social-links {
     position: relative;
     top: 0.3em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     list-style: none;
-
 }
 
 .social-links li a i {
-    padding: 0;
     width: 70px;
     height: 70px;
     line-height:4.5rem;
@@ -236,97 +107,20 @@ padding:0em;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-
 }
-.social-links li a i:hover {
-    background:greenyellow;
-    color: black;
-    
-}
-
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-
 
 /* 320px = 20em */
 @media screen and (min-width: 20em) and (max-width:119.938em) {
 
 
 /* - VISIBLE - */
-/* .landing-video, */
+
 .blog-post,
 .blog-post-2,
 .blog-post-3 {
 display:block;
 }
-/* - HIDDEN - */
-.newsletter-container,
-.landing-text,
-.landing-image-container,
-.blog-post-2 img,
-.blog-post-3 img
-{
-display:none;
-}
 
-/* ----------- HEADER ----------- */
-.header-container {
-display:flex;
-justify-content: center;
-flex-direction: column;
-text-align: center;
-width: 100%;
-height: 7em;
-background-color:rgba(7, 7, 7, 0.9);
-border-bottom: 2px solid;
-border-image: linear-gradient(
-to right,
-#FF00FF 10%,
-rgb(0, 255, 255) 60%,
-#FF00FF 70%
-) 1 2 10%;
-}
-#branding {
-margin-top: 4em;
-}
-.logotype{
-position: relative;
-top: 0em;
-left: 0em;
-color:#ffffff;
-text-decoration: unset;
-font-size: clamp(1rem, 1vw + 2rem, 5rem);
-font-family: "Conthrax";
-
-}
-/* ----------- NAV-BAR ----------- */
-.navbar {
-justify-content: center;
-position: relative;
-top: 0em;
-left: 0em;
-margin: 0em;
-}
-.navbar ul {
-display: flex;
-justify-content: center;
-gap: 1.5em;
-list-style: none;
-margin: 1em;
-padding: 0;
-}
-.navbar a {
-color:#ffffff;
-font-size: clamp(0.2rem, 1vw + 1rem, 4rem);
-text-transform: uppercase;
-text-decoration: unset;
-}
 /* -------------- BLOG -------------- */
 .blog-container {
     height: auto;
@@ -357,16 +151,14 @@ margin-bottom: 0.3em;
 padding: 0.2em 0.3em;
 font-size: clamp(1rem, 1vw + 1rem, 1rem);
 }
-/* -------------- FOOTER -------------- */
+
+/* -------------- FOOTER-------------- */
 .footer-container {
-    display: flex;
-    justify-content: center;
     position: fixed;
     left: 0;
     right:0;
     bottom: 0;
     width: 100%;
-    height: 4em;
     background-color: rgba(0, 0, 0, 0.9);
     border-top: 2px solid;
     border-image: linear-gradient(
@@ -376,39 +168,12 @@ font-size: clamp(1rem, 1vw + 1rem, 1rem);
     #FF00FF 70%
     ) 1 2 10%;
 }
-
-#footer-details {
-padding:0.3em;
-}
-
-.social-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    top: 0;
-}
-.social-links a{
-    outline: unset;
-    
-}
 .social-links li a i {
-    padding:0;
     width: 42px;
     height: 42px;
     line-height:2.7rem;
     font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
-    border-radius: 50%;
-    color: white;
-    background-color: rgb(35, 0, 236);
-    transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
-    -webkit-transition: all 0.35s ease-in-out;
-    -o-transition: all 0.35s ease-in-out;
-
 }
-
-
 }
 
 /* 768px = 48em */
@@ -425,12 +190,3 @@ min-width: 25em;
 }
 
 }
-
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ 
