--- a/assets/css/style_contact.css
+++ b/assets/css/style_contact.css
@@ -4,7 +4,7 @@
     display:none;
     }
 
-/* ---- FORMS: BOTH ---- */
+/* ---- ALL FORMS (IN CONTACT PAGE) ---- */
 .newsletter-container,
 .contact-form-container {
     display:flex;
@@ -107,6 +107,8 @@ input[type="email"]{
     position: relative;
     top: 0.3em;
 }
+
+/* RESPONSIVENESS: MEDIA QUERIES */ 
 
 /* 320px = 20em */
  @media screen and (min-width: 20em) and (max-width:64em) {
