--- a/assets/css/style_resources.css
+++ b/assets/css/style_resources.css
@@ -109,6 +109,8 @@ rgba(255, 25, 224, 0.1)
     -o-transition: all 0.35s ease-in-out;
 }
 
+/* RESPONSIVENESS: MEDIA QUERIES */ 
+
 /* 320px = 20em */
 @media screen and (min-width: 20em) and (max-width:119.938em) {
 
