--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,148 +1,149 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap');
 
 /* Global */
-*{
-    /* outline: greenyellow 1px solid; */
-    box-sizing: border-box;
-    margin: 0;
-    padding:0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Rajdhani', sans-serif;
-    font-size: clamp(1rem, 1vw + 0.5rem, 5rem);
-    color: white;
-    width: 100%;
-    overflow:hidden;
-    background-color: black;
+  font-family: 'Rajdhani', sans-serif;
+  font-size: clamp(1rem, 1vw + 0.5rem, 5rem);
+  color: white;
+  width: 100%;
+  overflow: hidden;
+  background-color: black;
 }
+
 /* - HIDDEN - */
 .blog-post h4 {
-display:none;
+  display: none;
 }
 
 /* --- ALL HOVERS --- */ 
-.navbar .highlight, 
-.navbar .current a
-{
-color:cyan;
-font-weight:bold;
+.navbar .highlight,
+.navbar .current a {
+  color: cyan;
+  font-weight: bold;
 }
-.navbar a:hover{
-color:#05f7ff;
-font-weight:bold;
+
+.navbar a:hover {
+  color: #05f7ff;
+  font-weight: bold;
 }
-.logotype:hover{
-color:#05f7ff;
+
+.logotype:hover {
+  color: #05f7ff;
 }
-.form-button:hover{
-background-color:#05f7ff;
-color: black;
+
+.form-button:hover {
+  background-color: #05f7ff;
+  color: black;
 }
-.blog-container a:hover{
-color: cyan;
+
+.blog-container a:hover {
+  color: cyan;
 }
+
 .social-links li a i:hover {
-background:greenyellow;
-color: black;
-    
+  background: greenyellow;
+  color: black;
 }
 
 /* -------------- HEADER -------------- */ 
-.header-container{
-    display:flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 3em;
-    background-color:rgba(7, 7, 7, 0.2);
-    border-bottom: 2px solid;
-        border-image: linear-gradient(
-        to right,
-        #FF00FF 10%,
-        rgb(0, 255, 255) 60%,
-        #FF00FF 70%
-        ) 1 2 10%;
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 3em;
+  background-color: rgba(7, 7, 7, 0.2);
+  border-bottom: 2px solid;
+  border-image: linear-gradient(to right, #FF00FF 10%, rgb(0, 255, 255) 60%, #FF00FF 70%) 1 2 10%;
 }
-.logotype{
-    position: relative;
-    top: 0.15em;
-    left: 5%;
-    color:#ffffff;
-    text-decoration: unset;
-    font-size: clamp(3rem, 1vw + 1rem, 5rem);
-    margin: 0.5em;
-    font-family: "Conthrax";
-    filter: drop-shadow(0px 3px 2px rgba(8, 245, 253, 0.9));
+
+.logotype {
+  position: relative;
+  top: 0.15em;
+  left: 5%;
+  color: #ffffff;
+  text-decoration: unset;
+  font-size: clamp(3rem, 1vw + 1rem, 5rem);
+  margin: 0.5em;
+  font-family: "Conthrax";
+  filter: drop-shadow(0px 3px 2px rgba(8, 245, 253, 0.9));
 }
 
 /* ----------- NAV-BAR ----------- */
 .navbar {
-    display: flex;
-    justify-content: end;
-    width: 100%;
-    position: relative;
-    top: -1.5em;
-    margin: 1em;
+  display: flex;
+  justify-content: end;
+  width: 100%;
+  position: relative;
+  top: -1.5em;
+  margin: 1em;
 }
+
 .navbar ul {
-    display: flex;
-    gap: 3em;
-    height: 4em;
-    list-style: none;
-    padding: 1em;
+  display: flex;
+  gap: 3em;
+  height: 4em;
+  list-style: none;
+  padding: 1em;
 }
+
 .navbar a {
-    color:#ffffff;
-    font-size: clamp(3rem, 1vw + 1rem, 5rem);
-    text-transform: uppercase;
-    text-decoration: unset;
+  color: #ffffff;
+  font-size: clamp(3rem, 1vw + 1rem, 5rem);
+  text-transform: uppercase;
+  text-decoration: unset;
 }
 
 /* -------------- LANDING VIDEO -------------- */ 
 .video-container {
-    position: absolute;
-    height: 3em;
-    width: 100%;
-    overflow: hidden; 
-    z-index: -100;
+  position: absolute;
+  height: 3em;
+  width: 100%;
+  overflow: hidden; 
+  z-index: -100;
 }
 
 .video-container video {
-    position: relative;
+  position: relative;
 }
+
 .landing-video,
 .landing-overlay { 
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 300%;
-    min-height: 300%;
-    transform: translateX(-50%) translateY(-50%) rotateX(0deg) rotateY(30deg);
-    background-size: cover;
-    background-position: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 300%;
+  min-height: 300%;
+  transform: translateX(-50%) translateY(-50%) rotateX(0deg) rotateY(30deg);
+  background-size: cover;
+  background-position: center;
+}
 
-}
 .landing-overlay {
-    position: absolute;
-    background: #524399;
-    mix-blend-mode: overlay;
+  position: absolute;
+  background: #524399;
+  mix-blend-mode: overlay;
 }
+
 
 /* -------------- LANDING IMAGE -------------- */ 
-.landing-image-container{
+.landing-image-container {
     height: 100vh;
     width: 100%;
-    overflow:hidden;
- 
+    overflow: hidden;
 }
+  
 .landing-image {
-    
     width: 100%;
     height: 100%;
-    /* min-height: 33em; */
-    
 }
-.landing-image img{
+  
+.landing-image img {
     position: relative;
     top: -5%;
     width: 100%;
@@ -151,18 +152,19 @@ color: black;
     background-size: cover;
     background-repeat: no-repeat;
 }
+  
 /* -------------- LANDING TEXT -------------- */ 
 .landing-text {
     margin: 0;
     padding: 3em 2em;
     position: absolute;
     top: 25.5em;
-    
 }
+  
 .landing-text h2 {
     font-size: clamp(5rem, 1vw + 1rem, 5rem);
 }
-
+  
 /* -------------- BLOG -------------- */
 .blog-container {
     display: flex;
@@ -174,57 +176,61 @@ color: black;
     left: 5em;
     height: auto;
 }
-
+  
 .blog-post,
 .blog-post-2,
 .blog-post-3 {
-max-width:18em;
-padding: 1em 1.2em;
-background-color: black;
-border: 10px solid;
-border-image:linear-gradient(
-to bottom,
-rgba(8, 85, 201, 0.5),
-rgba(8, 255, 255, 0.8),
-rgba(255, 25, 224, 0.8),
-rgba(255, 25, 224, 0.1)
-) 1 2 10% 90%; } 
-
+    max-width:18em;
+    padding: 1em 1.2em;
+    background-color: black;
+    border: 10px solid;
+    border-image:linear-gradient(
+      to bottom,
+      rgba(8, 85, 201, 0.5),
+      rgba(8, 255, 255, 0.8),
+      rgba(255, 25, 224, 0.8),
+      rgba(255, 25, 224, 0.1)
+    ) 1 2 10% 90%;
+} 
+  
 .blog-post img,
 .blog-post-2 img,
 .blog-post-3 img {
-width: 100%;
-height: 7em;
-border: 8px solid;
-border-image:linear-gradient(
-to bottom,
-rgba(8, 85, 201, 0.5),
-rgba(8, 255, 255, 0.8),
-rgba(255, 25, 224, 0.8),
-rgba(255, 25, 224, 0.1)
-) 1 2 10% 90%; } 
-
+    width: 100%;
+    height: 7em;
+    border: 8px solid;
+    border-image:linear-gradient(
+      to bottom,
+      rgba(8, 85, 201, 0.5),
+      rgba(8, 255, 255, 0.8),
+      rgba(255, 25, 224, 0.8),
+      rgba(255, 25, 224, 0.1)
+    ) 1 2 10% 90%;
+} 
+  
 .blog-post h2,
 .blog-post-2 h2,
 .blog-post-3 h2 {
-    text-align:start;
+    text-align: start;
     font-size: clamp(1rem, 0.5vw + 1rem, 2rem);
 }
+  
 .blog-post h3,
 .blog-post-2 h3,
 .blog-post-3 h3 {
     margin: 0.3em 0;
-    text-align:start;
+    text-align: start;
     font-size: clamp(1rem, 0.5vw + 1rem, 2rem);
 }
+  
 .blog-post p,
-.blog-post-2 p,
+blog-post-2 p,
 .blog-post-3 p {
-    text-align:start;
+    text-align: start;
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(1rem, 0.5vw + 1rem, 1rem);
-    
 }
+  
 .blog-post a,
 .blog-post-2 a,
 .blog-post-3 a {
@@ -234,55 +240,59 @@ rgba(255, 25, 224, 0.1)
     font-size: clamp(1rem, 1vw + 1rem, 1.2rem);
     color: cyan;
 }
-
+  
 /* -------------- NEWSLETTER -------------- */
 .newsletter-container {
     position: absolute;
     top: 27em;
-    left:49.3em;
-    display:flex;
+    left: 49.3em;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
-.newsletter{
+  
+.newsletter {
     padding: 0.5em;
 }
-
-.newsletter h3{
+  
+.newsletter h3 { 
     text-align: center;
-    color:cyan;
+    color: cyan;
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
 }
-input[type="email"]{
-    padding:1em;
+  
+input[type="email"] {
+    padding: 1em;
     outline: unset;
 }
+  
 #email-form {
     text-align: center;
     width: 100%;
     font-family: "Rajdhani";
     font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
     padding: 0em;
-    color:black;
+    color: black;
     outline: unset;
 }
-.form-button{
+  
+.form-button {
     font-family: "Conthrax";
     width: 100%;
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
-    color:cyan;
+    color: cyan;
     border: 0.2px solid;
-        border-image:linear-gradient(
-            to bottom,
-            rgba(50, 8, 201, 0.5),
-            rgba(8, 255, 255, 0.8),
-            rgba(255, 25, 224, 0.8),
-            rgba(255, 25, 224, 0.1)
-          ) 1 2 10% 90%;
+    border-image: linear-gradient(
+      to bottom,
+      rgba(50, 8, 201, 0.5),
+      rgba(8, 255, 255, 0.8),
+      rgba(255, 25, 224, 0.8),
+      rgba(255, 25, 224, 0.1)
+    ) 1 2 10% 90%;
 }
-
+  
 /* -------------- FOOTER -------------- */
 .footer-container {
     width: 30%;
@@ -293,19 +303,20 @@ input[type="email"]{
     display: flex;
     justify-content: space-evenly;
 }
-
+  
 .social-links {
     display: flex;
     justify-content: center;
     align-items: center;
     list-style: none;
 }
+  
 .social-links li a i {
     text-align: center;
     margin: 0.3em;
     width: 70px;
     height: 70px;
-    line-height:4.5rem;
+    line-height: 4.5rem;
     font-size: clamp(3rem, 1vw + 1rem, 5rem);
     border-radius: 50%;
     color: white;
@@ -314,15 +325,13 @@ input[type="email"]{
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-
 }
-
+  
 /* RESPONSIVENESS: MEDIA QUERIES */ 
 
 /* 320px = 20em */
 @media screen and (min-width: 20em) and (max-width:119.938em) {
 
-   
 /* - HIDDEN - */
 .landing-text,
 .landing-image-container,
@@ -331,30 +340,32 @@ input[type="email"]{
 .blog-post-3 img,
 .blog-post-2,
 .blog-post-3 {
-        display: none;
+    display: none;  
 }
+
 /* ----------- HEADER ----------- */
 .header-container {
-display: flex;
-justify-content: center;
-flex-direction: column;
-text-align: center;
-width: 100%;
-height: 7em;
-background-color:rgba(7, 7, 7, 0.8);
-border-bottom: 2px solid;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    height: 7em;
+    background-color:rgba(7, 7, 7, 0.8);
+    border-bottom: 2px solid;
     border-image: linear-gradient(
-    to right,
-    #FF00FF 10%,
-    rgb(0, 255, 255) 60%,
-    #FF00FF 70%
+        to right,
+        #FF00FF 10%,
+        rgb(0, 255, 255) 60%,
+        #FF00FF 70%
     ) 1 2 10%;
 }
 
 #branding {
     margin-top: 3.5em;
 }
-.logotype{
+
+.logotype {
     position: relative;
     left: 0em;
     color:#ffffff;
@@ -370,6 +381,7 @@ border-bottom: 2px solid;
     left: 0em;
     margin: 0em;
 }
+
 .navbar ul {
     display: flex;
     justify-content: center;
@@ -378,6 +390,7 @@ border-bottom: 2px solid;
     margin: 1em;
     padding: 0;
 }
+
 .navbar a {
     color:#ffffff;
     font-size: clamp(0.2rem, 1vw + 1rem, 4rem);
@@ -390,10 +403,12 @@ border-bottom: 2px solid;
     z-index: -100;
     height: 7em;
 }
+
 .landing-video,
 .landing-overlay { 
     transform: translateX(-50%) translateY(-30%) rotateX(20deg) rotateY(130deg);
 }
+
 
 /* -------------- BLOG -------------- */
 .blog-container {
@@ -401,72 +416,75 @@ border-bottom: 2px solid;
     justify-content: center;
     margin: 1em;
     position: relative;
-    left:0em;
-    top:0em;
-}
-
-.blog-post img {
-padding: 0.5em;
-margin-bottom: 0.5em;
-width: 100%;
-border: 4px solid;
-border-image:linear-gradient(
-to bottom,
-rgba(8, 85, 201, 0.5),
-rgba(8, 255, 255, 0.8),
-rgba(255, 25, 224, 0.8),
-rgba(255, 25, 224, 0.1)
-) 1 2 10% 90%; } 
-
-.blog-post h2 {
+    left: 0em;
+    top: 0em;
+  }
+  
+  .blog-post img {
+    padding: 0.5em;
+    margin-bottom: 0.5em;
+    width: 100%;
+    border: 4px solid;
+    border-image: linear-gradient(
+        to bottom,
+        rgba(8, 85, 201, 0.5),
+        rgba(8, 255, 255, 0.8),
+        rgba(255, 25, 224, 0.8),
+        rgba(255, 25, 224, 0.1)
+      ) 1 2 10% 90%;
+  } 
+  
+  .blog-post h2 {
     padding: 0.2em;
     font-size: clamp(0.5rem, 1vw + 1rem, 3rem);
-}
-
-.blog-post h3 {
+  }
+  
+  .blog-post h3 {
     font-size: clamp(0.2rem, 1vw + 0.8rem, 2rem);
-}
-
-.blog-post h4 {
+  }
+  
+  .blog-post h4 {
     display: block;
     font-size: clamp(1.5rem, 1vw + 1rem, 3rem);
     padding: 0.2em 0;
-}
-
-.blog-post p {
+  }
+  
+  .blog-post p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(0.2rem, 1vw + 0.5rem, 1rem);
     margin: 0.5em 0;
-}
-
-.blog-post a {
+  }
+  
+  .blog-post a {
     font-size: clamp(0.5rem, 1vw + 0.8rem, 2rem);
-}
-
-/* -------------- FOOTER-------------- */
-.footer-container {
+  }
+  
+  /* -------------- FOOTER-------------- */
+  .footer-container {
     position: fixed;
     left: 0;
-    right:0;
+    right: 0;
     bottom: 0;
     width: 100%;
     height: 4em;
     background-color: rgba(0, 0, 0, 0.9);
     border-top: 2px solid;
     border-image: linear-gradient(
-    to left,
-    #FF00FF 10%,
-    rgb(0, 255, 255) 60%,
-    #FF00FF 70%
-    ) 1 2 10%;
-}
-#footer-details {
-padding:0.3em;
-}
-.social-links li a i {
+        to left,
+        #FF00FF 10%,
+        rgb(0, 255, 255) 60%,
+        #FF00FF 70%
+      ) 1 2 10%;
+  }
+  
+  #footer-details {
+    padding: 0.3em;
+  }
+  
+  .social-links li a i {
     width: 42px;
     height: 42px;
-    line-height:2.7rem;
+    line-height: 2.7rem;
     font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
     border-radius: 50%;
     color: white;
@@ -475,86 +493,70 @@ padding:0.3em;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-}
+  }
 }
 
 /* 375px = 23.438em */
 @media screen and (min-width: 23.438em) and (max-width:119.938em) {
-
-
-.blog-post {
-max-width: 23em;
-min-height: 27em;
-position: relative;
-top: 0em;
-left: 0;
+    .blog-post {
+      max-width: 23em;
+      min-height: 27em;
+      position: relative;
+      top: 0em;
+      left: 0;
+    }
+    .blog-post h4 {
+      font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
+      padding: 0.5em 0;
+    }
+    .blog-post h3 {
+      font-size: clamp(1.5rem, 1vw + 1rem, 3rem);
+    }
+    .blog-container p {
+      font-size: clamp(0.5rem, 0.5vw + 1rem, 0.9rem);
+    }
+    .blog-container a {
+      font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
+    }
 }
-
-.blog-post h4{
-font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
-padding: 0.5em 0;
-}
-.blog-post h3{
-font-size: clamp(1.5rem, 1vw + 1rem, 3rem);
-}
-.blog-container p{
-font-size: clamp(0.5rem, 0.5vw + 1rem, 0.9rem);
-}
-.blog-container a  {
-font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
-}
-}
-
-/* 600px = 37.5em */
-@media screen and (min-width: 37.5em) and (max-width:119.938em) {
-.blog-container {
-    margin-top: 3em;
-}
-
-    .footer-container{
-        position: fixed;
-        bottom:0;
-        height: auto;
+  
+  /* 600px = 37.5em */
+  @media screen and (min-width: 37.5em) and (max-width:119.938em) {
+    .blog-container {
+      margin-top: 3em;
+    }
+    .footer-container {
+      position: fixed;
+      bottom: 0;
+      height: auto;
     }
     .social-links li a i {
-        padding: 0;
-        width: 70px;
-        height: 70px;
-        line-height:4.5rem;
-        font-size: clamp(3.2rem, 1vw + 1rem, 5rem);
-        }
-
+      padding: 0;
+      width: 70px;
+      height: 70px;
+      line-height: 4.5rem;
+      font-size: clamp(3.2rem, 1vw + 1rem, 5rem);
+    }
 }
-
-/* 768px = 48em */
-@media screen and (min-width: 48em) and (max-width:119.938em) {
-.blog-post h4{
-font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
-padding: 0.5em 0;
+  
+  /* 768px = 48em */
+  @media screen and (min-width: 48em) and (max-width:119.938em) {
+    .blog-post h4 {
+      font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
+      padding: 0.5em 0;
+    }
+    .blog-post h3 {
+      font-size: clamp(1.5rem, 1vw + 1rem, 3rem);
+    }
+    .blog-container p,
+    .blog-container li {
+      font-size: clamp(1rem, 0.5vw + 1rem, 0.9rem);
+    }
+    .blog-container a  {
+      font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
+    }
+    .blog-post {
+      min-height: 30em;
+      left: 0;
+    }
 }
-.blog-post h3{
-font-size: clamp(1.5rem, 1vw + 1rem, 3rem);
-}
-.blog-container p,
-.blog-container li {
-font-size: clamp(1rem, 0.5vw + 1rem, 0.9rem);
-}
-.blog-container a  {
-font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
-}
-
-.blog-post {
-
-min-height: 30em;
-
-left: 0;
-}
-}
-
-
-
-
-
-
-
-
