--- a/assets/css/style_article.css
+++ b/assets/css/style_article.css
@@ -17,14 +17,12 @@
     height: auto;
     margin: auto auto;
     text-align: center;
-    filter: drop-shadow(0 0 8px rgba(14, 0, 214, 0.966));
-}
+    filter: drop-shadow(0 0 8px rgba(14, 0, 214, 0.966));}
 .blog-container li {
     margin: 1em 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(1rem, 0.5vw + 1rem, 1rem);
-    text-align: start;
-}
+    text-align: start;}
 .blog-post {
 height: auto;
 max-width:40em;
@@ -40,7 +38,6 @@ rgba(8, 255, 255, 0.8),
 rgba(255, 25, 224, 0.8),
 rgba(255, 25, 224, 0.1)
 ) 1 2 10% 90%; } 
-
 .blog-post img {
 text-align-last: center;
 width: 40%;
@@ -56,32 +53,25 @@ rgba(8, 255, 255, 0.8),
 rgba(255, 25, 224, 0.8),
 rgba(255, 25, 224, 0.1)
 ) 1 2 10% 90%; } 
-
 .blog-post h2 {
     text-align:start;
-    font-size: clamp(1rem, 0.5vw + 1rem, 2rem);
-}
+    font-size: clamp(1rem, 0.5vw + 1rem, 2rem);}
 .blog-post h3 {
     text-align:start;
-    font-size: clamp(1rem, 0.5vw + 1rem, 2rem);
-}
+    font-size: clamp(1rem, 0.5vw + 1rem, 2rem);}
 .blog-post p {
     text-align:start;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(1rem, 0.5vw + 1rem, 1rem);
-    
-}
+    font-size: clamp(1rem, 0.5vw + 1rem, 1rem);}
 .blog-post a {
     float: right;
     position: relative;
     top: 0.4em;
     margin:0;
     font-size: clamp(1rem, 1vw + 1rem, 1.2rem);
-    color: cyan;
-}
+    color: cyan;}
 
 /* RESPONSIVENESS: MEDIA QUERIES */ 
-
 /* 320px = 20em */
  @media screen and (min-width: 20em) and (max-width: 119.938em){
   
@@ -164,7 +154,6 @@ rgba(255, 25, 224, 0.1)
         font-size: clamp(0.5rem, 0.5vw + 1rem, 0.6rem);
     }
 }
-
 /* 600px = 37.5em */
 @media screen and (min-width: 37.5em) and (max-width:119.938em) {
    
@@ -193,8 +182,6 @@ line-height:4.5rem;
 font-size: clamp(3.2rem, 1vw + 1rem, 5rem);
 }
 }
-
-
 /* 768px = 48em */
 @media screen and (min-width: 48em) and (max-width:119.938em) {
 .blog-container {
@@ -225,6 +212,6 @@ font-size: clamp(0.8rem, 0.5vw + 0.7rem, 1rem);
         font-family: Arial, Helvetica, sans-serif;
         font-size: clamp(1rem, 1vw + 0.8rem, 2rem);
     }
-    }
+}
 
 
