--- a/assets/css/style_error.css
+++ b/assets/css/style_error.css
@@ -1,16 +1,13 @@
 
 .error-message {
-    margin: 5em;
-}
+    margin: 5em;}
 .error-message h2{
     color: red;
     margin:0;
     font-size: 2em;
-    font-style: italic;
-}
+    font-style: italic;}
 .error-message p{  
-    font-size: 2em;
-}
+    font-size: 2em;}
 
 /* 320px = 20em */
 @media screen and (min-width: 20em) and (max-width:119.938em) {
