--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,7 +224,7 @@ body {
 }
   
 .blog-post p,
-blog-post-2 p,
+.blog-post-2 p,
 .blog-post-3 p {
     text-align: start;
     font-family: Arial, Helvetica, sans-serif;
